# copepod

./: Cargo.toml  README.md
examples/: basic_usage.rs  more_cases.rs
src/: lib.rs  main.rs
