[package]
name = "channel-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.18"
ctor = "0.2.9"
futures = "0.3.31"
dashmap = "6.1.0"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
env_logger = "0.11.6"
log = "0.4.25"
